<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:text="@string/teamA"
                android:textColor="#616161"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:paddingBottom="24dp"
                android:text="@string/initialScore"
                android:textColor="#000000"
                android:textSize="56sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/stdButtonStyle"
                android:onClick="add_3points"
                android:text="@string/plus3Button" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/stdButtonStyle"
                android:onClick="add_2points"
                android:text="@string/plus2Button" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/stdButtonStyle"
                android:onClick="add_1point"
                android:text="@string/freeThrowButton" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray"></View>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:text="@string/teamB"
                android:textColor="#616161"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:paddingBottom="24dp"
                android:text="@string/initialScore"
                android:textColor="#000000"
                android:textSize="56sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/stdButtonStyle"
                android:onClick="add_3pointsTeamB"
                android:text="@string/plus2Button" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/stdButtonStyle"
                android:onClick="add_2pointsTeamB"
                android:text="@string/plus2Button" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/stdButtonStyle"
                android:onClick="add_1pointTeamB"
                android:text="@string/freeThrowButton" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:onClick="resetAllScores"
        android:text="@string/resetButton"
        />

</RelativeLayout>